--- a/pages/andrew-garfield/spiderman1.html
+++ b/pages/andrew-garfield/spiderman1.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider Man | Multiverso</title>
   <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 </head>
 
 <body>
@@ -34,24 +35,26 @@
     <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-andrew/movie-01/logo.png" alt="Spiderman (2002)"
-            title="Spiderman (2002)" />
+          <img src="../../assets/images/spiderman-andrew/movie-01/logo.png" alt="Spiderman (2012)"
+            title="Spiderman (2012)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2002</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2012</li>
+              <li>Diretor: Marc Webb</li>
             </ul>
           </div>
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;Depois de ser picado por uma aranha geneticamente modificada em uma
-              demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los
-              para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém,
-              ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes
-              para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico
-              Duende Verde.</p>
+            <p><strong>Sinopse:</strong>&nbsp;O Espetacular Homem-Aranha é a história de Peter Parker, um estudante rejeitado por seus 
+            colegas e que foi abandonado por seus pais ainda criança, sendo então criado por seu Tio Ben e pela Tia May. Como muitos 
+            adolescentes, Peter tenta descobrir quem ele é e como ele se tornou a pessoa que é hoje. Peter também está começando uma 
+            história com sua primeira paixão, Gwen Stacy, e juntos eles lidam com amor, compromissos e segredos. Quando Peter descobre 
+            uma misteriosa maleta que pertenceu a seu pai, ele começa uma jornada para entender o desaparecimento de seus pais – o que 
+            o leva diretamente à Oscorp e ao laboratório do Dr. Curt Connors, antigo sócio de seu pai. E como Peter está em rota de 
+            colisão com o alter-ego do Dr. Connors, O Lagarto; ele tem que tomar decisões que podem alterar vidas, para usar seus poderes 
+            e moldar seu destino de se tornar um herói.</p>
           </div>
         </div>
 
@@ -74,13 +77,14 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-03.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-andrew/movie-01/gallery/image-01-full.png"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-01.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-andrew/movie-01/gallery/image-02-full.jpg"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-andrew/movie-01/gallery/image-03-full.jpeg"><img src="../../assets/images/spiderman-andrew/movie-01/gallery/image-03.png" alt=""></a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 </html>
