--- a/pages/andrew-garfield/spiderman2.html
+++ b/pages/andrew-garfield/spiderman2.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider Man | Multiverso</title>
   <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 </head>
 
 <body>
@@ -35,14 +36,14 @@
     <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-andrew/movie-02/logo.png" alt="Spiderman 2 (2005)"
-            title="Spiderman 2 (2005)" />
+          <img src="../../assets/images/spiderman-andrew/movie-02/logo.png" alt="Spiderman 2 (2014)"
+            title="Spiderman 2 (2014)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2005</li>
+              <li>Ano: 2014</li>
               <li>Diretor: Sam Raimi</li>
             </ul>
           </div>
@@ -70,13 +71,14 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-andrew/movie-02/gallery/image-01-full.jpeg"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-andrew/movie-02/gallery/image-02-full.jpeg"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-andrew/movie-02/gallery/image-03-full.jpeg"><img src="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png" alt=""></a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 </html>
