--- a/pages/andrew-garfield/spiderman2.html
+++ b/pages/andrew-garfield/spiderman2.html
@@ -44,18 +44,22 @@
           <div class="pills">
             <ul>
               <li>Ano: 2014</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Diretor: Marc Webb</li>
             </ul>
           </div>
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;Quando uma falha na experiência de fusão nuclear resulta em uma explosão que mata sua esposa, o Dr. Otto Octavius é transformado em Dr. Octopus, um ciborgue com tentáculos de metal. Doc Ock culpa o Homem-Aranha pelo acidente e quer vingança. Enquanto isso, o alter ego do herói, Peter Parker, perde seus poderes. Para complicar as coisas, o seu melhor amigo odeia o Homem-Aranha e sua amada fica noiva..</p>
+            <p><strong>Sinopse:</strong>&nbsp;Para Peter Parker, não há nada melhor do que se balançar entre arranha-céus, ser um 
+              herói e passar tempo com Gwen. Mas ser o Homem-Aranha tem um preço: apenas ele pode proteger os nova-iorquinos dos 
+              vilões que ameaçam a cidade. Com o surgimento de Electro, Peter precisa confrontar um inimigo mais poderoso do que 
+              ele. E quando seu velho amigo Harry Osborn retorna à cidade, Peter percebe que todos os seus inimigos têm uma coisa 
+              em comum: a OsCorp.</p>
           </div>
         </div>
 
         <div class="s-links">
           <ul>
             <li>
-              <a href="#" class="link-button">
+              <a href="https://www.youtube.com/watch?v=PfUDLzyC1cM" class="link-button" target="_blank">
                 <span class="icon">
                   <div class="play-icon">&nbsp;</div>
                 </span>
