--- a/pages/tom-holland/spiderman2.html
+++ b/pages/tom-holland/spiderman2.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spider Man | Multiverso</title>
   <link href="../../assets/css/internal.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 </head>
 
 <body>
@@ -69,14 +70,14 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tom/movie-02/gallery/image-01-full.jpeg"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-01.jpg" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tom/movie-02/gallery/image-02-full.jpeg"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-02.jpg" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tom/movie-02/gallery/image-03-full.jpg"><img src="../../assets/images/spiderman-tom/movie-02/gallery/image-03.jpg" alt=""></a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 </body>
 </html>
