--- a/pages/tom-holland/spiderman3.html
+++ b/pages/tom-holland/spiderman3.html
@@ -35,26 +35,26 @@
     <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2007)"
-            title="Spiderman 3 (2007)" />
+          <img src="../../assets/images/spiderman-tom/movie-03/logo.png" alt="Spiderman 3 (2021)"
+            title="Spiderman 3 (2021)" />
         </div>
 
         <div class="s-description">
           <div class="pills">
             <ul>
-              <li>Ano: 2007</li>
-              <li>Diretor: Sam Raimi</li>
+              <li>Ano: 2021</li>
+              <li>Diretor: Jon Watts</li>
             </ul>
           </div>
           <div class="s-description__text">
-            <p><strong>Sinopse:</strong>&nbsp;O relacionamento entre Peter Parker e Mary Jane parece estar dando certo, mas outros problemas começam a surgir. A roupa de Homem-Aranha torna-se preta e acaba controlando Peter - apesar de aumentar seus poderes, ela revela e amplia o lado obscuro de sua personalidade. Com isso, os vilões Venom e Homem-Areia tentam destruir o herói.</p>
+            <p><strong>Sinopse:</strong>&nbsp;Pela primeira vez na história cinematográfica do Homem-Aranha, nosso herói amigo da vizinhança é desmascarado e não consegue mais separar sua vida normal dos grandes riscos de ser um super-herói. Quando ele pede ajuda ao Doutor Estranho, os riscos se tornam ainda mais perigosos, e o forçam a descobrir o que realmente significa ser o Homem-Aranha.</p>
           </div>
         </div>
 
         <div class="s-links">
           <ul>
             <li>
-              <a href="#" class="link-button">
+              <a href="https://www.youtube.com/watch?v=bHzGeci_8wc" class="link-button" target="_blank">
                 <span class="icon">
                   <div class="play-icon">&nbsp;</div>
                 </span>
@@ -70,10 +70,9 @@
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png" alt=""></a></li>
-            <li><a href="#"><img src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tom/movie-03/gallery/image-01-full.jpg"><img src="../../assets/images/spiderman-tom/movie-03/gallery/image-01.jpg" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tom/movie-03/gallery/image-02-full.jpg"><img src="../../assets/images/spiderman-tom/movie-03/gallery/image-02.jpg" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tom/movie-03/gallery/image-03-full.jpg"><img src="../../assets/images/spiderman-tom/movie-03/gallery/image-03.jpg" alt=""></a></li>
           </ul>
         </div>
       </div>
